--- a/plataforma-axis/style.css
+++ b/plataforma-axis/style.css
@@ -7,79 +7,84 @@ body {
   align-items: center;
   min-height: 100vh;
 }
-.separator {
-  display: flex;
-  align-items: center;
-  text-align: center;
-  margin: 20px 0;
-}
-
-.separator::before,
-.separator::after {
-  content: "";
-  flex: 1;
-  border-bottom: 1px solid #ccc;
-}
-
-.separator:not(:empty)::before {
-  margin-right: 10px;
-}
-
-.separator:not(:empty)::after {
-  margin-left: 10px;
-}
-
-.separator span {
-  color: white;
-}
 
 .container {
   width: 100%;
   max-width: 400px;
   padding: 15px;
 }
+
 .card {
   background: #0C5491;
-  padding: 20px;
-  border-radius: 20px;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  padding: 25px;
+  border-radius: 25px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
+
 .card h2 {
   text-align: center;
   color: white;
+  margin-bottom: 10px;
 }
 
-.card h4 {
-    color: #B3B3B3;
+.card p, h4 {
+  color: #B3B3B3;
+  text-align: center;
+  margin-bottom: 15px;
 }
-.card input, .card select, .card button {
+
+.card input,
+.card select {
   margin: 8px 0;
-  padding: 10px;
-  border-radius: 6px;
-  border: 1px solid white;
+  padding: 12px;
+  border-radius: 10px;
+  border: 1px solid #B3B3B3;
   font-size: 1em;
+  background-color: transparent;
+  color: white;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.card input::placeholder {
+  color: #ddd;
+}
+
+.card select {
   background-color: #0C5491;
   color: white;
 }
 
+/* Botão principal */
 .card button {
-  background: #004681;
-  color: #B3B3B3;
+  background: #00AEEF; /* azul claro */
+  color: white;
+  font-weight: bold;
   border: none;
+  padding: 12px;
+  border-radius: 15px;
+  width: 80%;
+  display: block;
+  margin: 20px auto 0 auto;
   cursor: pointer;
-  border-radius: 10px;
-  width: 230px;
-  display: block;      /* necessário para margin auto funcionar */
-  margin: 20px auto 0 auto;      /* centraliza horizontalmente */
+  transition: 0.3s;
 }
 
+.card button:hover {
+  background: #0095CC;
+}
+
+/* Mensagem de erro */
 .erro {
   color: #ee5397;
   font-size: 0.9em;
   margin-bottom: 10px;
 }
+
+
 @media (max-width: 500px) {
   .card {
     padding: 15px;
